tests/compile_fail/add/unknow_field_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/add/unknow_field_attribute.rs:2:18
  |
2 | struct Foo(#[add(unknown)] i32);
  |                  ^^^^^^^

error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/add/unknow_field_attribute.rs:6:17
  |
6 |     Bar { #[add(unknown)] i: i32 },
  |                 ^^^^^^^
